[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Characters/BobTheBuilder/Spikes.jpeg" type="Texture" id=1]
[ext_resource path="res://Game/Characters/BobTheBuilder/SpikeFloor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="SpikeFloor" type="Area2D"]
z_index = -1
collision_layer = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Damage" type="Timer" parent="."]
wait_time = 0.2

[node name="Exist" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_SpikeFloor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SpikeFloor_body_exited"]
[connection signal="timeout" from="Damage" to="." method="_on_Damage_timeout"]
[connection signal="timeout" from="Exist" to="." method="_on_Exist_timeout"]
